deploy/manifest.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dev-frontend
spec:
  selector:
    app: dev-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: webinterface
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dev-frontend
  name: dev-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dev-frontend
  template:
    metadata:
      labels:
        app: dev-frontend
    spec:
      containers:
        - name: dev-frontend
          image: eu.gcr.io/blulog-cloud/dev-frontend:latest
          ports:
            - containerPort: 80
              name: webinterface
      imagePullSecrets:
        - name: gcr-secret
